overflow body css fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,4 +3,5 @@
 body {
     background-color: black;
     color: white;
+    width: 95%;
 }
